--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index",
     "start-dev": "concurrently \"webpack-dev-server --hot --inline --open\" \"nodemon index.js\"",
     "clean": "rimraf dist",
-    "build": "yarn && yarn build",
+    "build": "react-scripts build",
     "test": "jest --config ./jest.config.json",
     "test:watch": "jest --watch"
   },
