--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
   "author": "Team",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.3.12",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.0",
+    "@ethersproject/providers": "^5.0.24",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "ethers": "^5.0.32",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.8.6",
@@ -37,6 +43,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.2.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
