--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.2.4",
